@@ -1,0 +1,1 @@
+Anotherfoo resource anotherfile's content.
