@@ -1,0 +1,1 @@
+Anotherfoo resource file's content.
