@@ -1,0 +1,1 @@
+Baz resource file's content.
