@@ -1,0 +1,1 @@
+Bar resource file's content.
