@@ -1,0 +1,1 @@
+Foo resource file's content.
