@@ -51,6 +51,6 @@ def suiteFromPackage(name):
 
 def test_suite():
     suite = unittest.TestSuite()
-    for name in ['view', 'staticdir', 'url']:
+    for name in ['view', 'staticdir', 'url', 'directoryresource']:
         suite.addTest(suiteFromPackage(name))
     return suite
