@@ -1,0 +1,1 @@
+# A python module with the same name as a directory resource is not allowed.
