@@ -1,0 +1,3 @@
+This empty page template file is just here to make sure that the
+static dir has some contents.  This is needed to make that directory
+end up in the tar ball and egg.
