@@ -1,0 +1,4 @@
+import grokcore.view
+
+class DirectoryResourceFoo(grokcore.view.DirectoryResource):
+    grokcore.view.path('foo')
