@@ -1,0 +1,1 @@
+Resource file in baz.
